Remove unneeded Component Nodes type